Fix jumbotron button overflow on mobile devices
Add responsive width breakpoints to the jumbotron component and adjust button padding to prevent the "Read Documentation" button from extending past the container on mobile viewports.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,16 @@
   @extend .m-auto;
   @extend .text-center;
 
+  width: 100%;
+
+  @include bs.media-breakpoint-up(md) {
+    width: 75%;
+  }
+
+  @include bs.media-breakpoint-up(lg) {
+    width: 50%;
+  }
+
   h1 {
     @extend .display-5;
     @extend .fw-bold;
